dashboard/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    k8s-app: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: kubernetes-dashboard-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    certmanager.k8s.io/cluster-issuer: "letsencrypt"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - dashboard.craicbox.app
    secretName: certificate-dashboard
  rules:
  - host: dashboard.craicbox.app
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
